test/dnsendpoint.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/externaldns.k8s.io/dnsendpoint_v1alpha1.json
apiVersion: externaldns.k8s.io/v1alpha1
kind: DNSEndpoint
metadata:
  name: test
  namespace: default
spec:
  endpoints:
    # will not be included
    - dnsName: "test.example.com"
      recordType: CNAME
      targets:
        - ipv4.example.com
      providerSpecific:
        - name: external-dns.alpha.kubernetes.io/cloudflare-proxied
          value: "false"
    # will be included in dns response
    - dnsName: "test2.example.dev"
      recordType: A
      targets:
        - 192.168.30.1
    - dnsName: "test3.example.dev"
      recordType: AAAA
      targets:
        - 2001:0db8:85a3:0000:0000:8a2e:0370:7334
