test/values-metallb.yaml
configInline:
  address-pools:
  - name: my-ip-space
    protocol: layer2
    addresses:
    - 192.168.223.128/25
